[gd_scene load_steps=4 format=3 uid="uid://b6w2wgroax77j"]

[ext_resource type="Script" path="res://logEntry.gd" id="1_30jt7"]
[ext_resource type="StyleBox" uid="uid://dhk5drqtmoj35" path="res://resources/normal.tres" id="1_j5mur"]

[sub_resource type="LabelSettings" id="LabelSettings_3ms8q"]
font_color = Color(1, 1, 0, 1)

[node name="LogEntry" type="Panel"]
custom_minimum_size = Vector2(0, 62)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("1_j5mur")
script = ExtResource("1_30jt7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="texturePath" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Image Path:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="setTexturePath" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Test"
label_settings = SubResource("LabelSettings_3ms8q")
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="startColor" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Start Color:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="setStartColor" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_3ms8q")
vertical_alignment = 1

[node name="endColor" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "End Color:"
horizontal_alignment = 2

[node name="setEndColor" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_3ms8q")
vertical_alignment = 1

[node name="Image" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Image:"
horizontal_alignment = 2

[node name="setImageOpacity" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_3ms8q")
vertical_alignment = 1

[node name="Overlay" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Overlay:"
horizontal_alignment = 2

[node name="setOverlayOpacity" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_3ms8q")
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
